crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@90.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_add VALUES (1,7,'-818934540071760498.60459975022373923760152136399214017262844141729040109985386964272131706381326192223266583769046276181472898406504104649192224392653722107164485675679551050629376558940966195135841284978096687306110481009743118940565957556492470398904849289222365256698601073536111216152709126800604695001949246634784573028721762079936564434050796321975774729383704426321489070979168993853338252728216162346796960170352897972568238870481118474064783391570102958474141459619245240874849766946530000977144965');"
---
InsertStmt@0..548
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_add"
  Whitespace@23..24 " "
  SelectStmt@24..546
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..546
      AConst@32..33
        Iconst@32..33 "1"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "7"
      Ascii44@35..36 ","
      AConst@36..546
        Sconst@36..546 "'-818934540071760498. ..."
  Ascii41@546..547 ")"
  Ascii59@547..548 ";"

